--- a/JsAlarm.css
+++ b/JsAlarm.css
@@ -11,6 +11,7 @@ body{
     text-align: center;
 }
 .house{
+    border-radius: 2.2rem;
     padding: 0 2rem;
     align-items: center;
     padding: 0 1rem;
